<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:text="@string/title_peliculas_Watch"
        android:textAlignment="viewStart"
        android:textColor="@color/colorWite"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:background="@drawable/border_search"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText"
            style="@style/Empty"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00FFFFFF"

            android:ems="10"
            android:gravity="center_vertical"
            android:inputType="textPersonName"
            android:textColor="@color/colorWite"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/border_constrain_p_s"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/searchConstraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="275dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textViewBusqueda"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="38dp"
                        android:layout_marginTop="24dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_BUSQUEDAS"
                        android:textColor="@color/colorWite"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/buttonSeeAll_1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/buttonSeeAll_1"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="38dp"
                        android:background="@color/colorPrimaryDark"
                        android:gravity="center_vertical"
                        android:text="@string/title_SeeAll"
                        android:textColor="@color/colorGrey"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textViewBusqueda"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewBusqueda" />

                    <ProgressBar
                        android:id="@+id/progressBar2"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/recyclerView1"
                        app:layout_constraintEnd_toEndOf="@+id/recyclerView1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/recyclerView1" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="275dp">

                    <TextView
                        android:id="@+id/textViewUpcoming"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_UPCOMING"
                        android:textColor="@color/colorWite"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/buttonSeeAll_4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/buttonSeeAll_4"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/colorPrimaryDark"
                        android:gravity="center_vertical"
                        android:text="@string/title_SeeAll"
                        android:textAllCaps="false"
                        android:textColor="@color/colorGrey"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textViewUpcoming"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView4"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewUpcoming" />

                    <ProgressBar
                        android:id="@+id/progressBar5"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:progressTint="@color/colorAccent"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/recyclerView4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewUpcoming" />

                </androidx.constraintlayout.widget.ConstraintLayout>
                    -->


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="275dp">

                    <TextView
                        android:id="@+id/textViewRecomendedForYou"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_RECOMENDED"
                        android:textColor="@color/colorWite"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/buttonSeeAll_2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/buttonSeeAll_2"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/colorPrimaryDark"
                        android:gravity="center_vertical"
                        android:text="@string/title_SeeAll"
                        android:textAllCaps="false"
                        android:textColor="@color/colorGrey"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textViewRecomendedForYou"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView2"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewRecomendedForYou" />

                    <ProgressBar
                        android:id="@+id/progressBar6"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/recyclerView2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewRecomendedForYou" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="275dp">

                    <TextView
                        android:id="@+id/textViewTopRated"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_TOP"
                        android:textColor="@color/colorWite"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/buttonSeeAll_3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/buttonSeeAll_3"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="50dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/colorPrimaryDark"
                        android:gravity="center_vertical"
                        android:text="@string/title_SeeAll"
                        android:textAllCaps="false"
                        android:textColor="@color/colorGrey"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textViewTopRated"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView3"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewTopRated" />

                    <ProgressBar
                        android:id="@+id/progressBar7"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/recyclerView3"
                        app:layout_constraintStart_toStartOf="@+id/recyclerView3"
                        app:layout_constraintTop_toBottomOf="@+id/textViewTopRated" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>